Ensure social media icons are centered on mobile

--- a/_sass/_contact-us.scss
+++ b/_sass/_contact-us.scss
@@ -29,6 +29,7 @@
     text-align: center;
     line-height: 4rem;
     &__icon {
-        padding: 1rem;
+        padding: 0 1rem;
+        display: inline-flex;
     }
 }
